--- a/package.json
+++ b/package.json
@@ -280,8 +280,7 @@
         "clean": "rimraf dist",
         "compile": "npm run clean && mkdirp ./dist && node --max_old_space_size=4096 ./node_modules/webpack/bin/webpack.js --color --config prod-webpack.config.js",
         "start": "webpack serve --progress --color --port 8081 --hot --inline --content-base .",
-        "dev
-        start": "webpack serve --progress --color --port 8081 --hot --inline --config ./webpack.config.devhome.js --content-base .",
+        "devstart": "webpack serve --progress --color --port 8081 --hot --inline --config ./webpack.config.devhome.js --content-base .",
         "cnrstart": "webpack-dev-server --progress --colors --port 8081 --hot --inline --config ./cnr-webpack.config.js --content-base .",
         "test": "karma start ./karma.conf.single-run.js --color",
         "continuoustest": "karma start ./karma.conf.continuous-test.js --color",
